refactor: Removes unnecessary directory structure and updates dockerfiles with new node image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,34 @@
 client:
- image: paulne/node_microservice
+ build: ./docker
+ dockerfile: dev-Dockerfile
  links:
   - server
  volumes:
-  - $PWD/src:/home/redjam/src
- command: bash -c "cd /home/redjam/src && npm install && nodemon -L ./test/test-client.js"
+  - $PWD:/home/dogfish/src
+ command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && nodemon -L --ignore 'test/*.js' ./test/test-client.js"
 
 server:
- image: paulne/node_microservice
+ build: ./docker
+ dockerfile: dev-Dockerfile
  links:
   - neo4j
  volumes:
-  - $PWD/src:/home/redjam/src
- command: bash -c "cd /home/redjam/src && npm install && nodemon -L ./user-service.js"
+  - $PWD:/home/dogfish/src
+ command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && nodemon -L --ignore 'test/*.js' ./user-service.js"
+
+test:
+ build: ./docker
+ links:
+  - neo4j
+ user: dogfish
+ command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && npm test"
 
 neo4j:
- build: .
+ build: ./docker
  dockerfile: neo4j-Dockerfile
  ports: 
   - "7474:7474"
   - "7473:7473"
   - "7687:7687"
  environment:
-  - NEO4J_AUTH=neo4j/Paul~J4m
-
-debug:
- image: paulne/node_microservice
- ports:
-  - "9080:9080"
-  - "5858:5858"
- links:
-  - neo4j
- volumes:
-  - $PWD/lib:/home/redjam/src
- command: bash -c "cd /home/redjam/src && npm install && nodemon -L --debug-brk ./user-service.js"
-
-debugger:
- build: .
- dockerfile: debug-Dockerfile
- net: host
- volumes_from:
-  - debug
+  - NEO4J_AUTH=neo4j/u535s3rv1c3
