--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "user-service",
   "version": "0.0.1",
-  "description": "User service for mtac",
+  "description": "User service using seneca-neo4j-store",
   "main": "user-service.js",
-  "license": "Unknown",
+  "license": "MIT",
   "author": {
-    "name": "Paul Nebel (http://www.redjamjar.net)",
-    "email": "paul.nebel@redjamjar.net"
+    "name": "Paul Nebel (http://paulnebel.io)",
+    "email": "paul@nebel.io"
   },
   "bugs": {
-    "url": "https://github.com/redjamjar/seneca-neo4j-store/issues"
+    "url": "https://github.com/DogFishProductions/seneca-user-service-example"
   },
-  "homepage": "https://github.com/redjamjar/seneca-neo4j-store",
+  "homepage": "https://github.com/DogFishProductions/seneca-user-service-example",
   "repository": {
     "type": "git",
-    "url": "https://github.com/redjamjar/seneca-neo4j-store.git"
+    "url": "https://github.com/DogFishProductions/seneca-user-service-example.git"
   },
   "scripts": {
-    "test": "lab test/*.test.js -r console -v -L -m 20000 -t 72",
+    "test": "lab test/test-client.js -r console -v -L -m 20000",
     "up": "docker-compose up neo4j server",
     "start": "docker-compose start neo4j server",
     "stop": "docker-compose stop neo4j server",
@@ -36,19 +36,18 @@
   },
   "devDependencies": {
     "util": "^0.10.3",
+    "code": "1.5.0",
     "lab": "6.x.x",
     "docco": "0.7.0",
     "eslint-config-hapi": "^8.0.1",
     "eslint-config-seneca": "1.x.x",
     "eslint-plugin-hapi": "4.x.x",
     "eslint-plugin-standard": "1.x.x",
-    "seneca": "^2.0.0",
-    "seneca-mem-store": "~0.4.0"
+    "seneca": "plugin"
   },
   "dependencies": {
     "q": "^1.4.1",
     "request": "^2.69.0",
-    "seneca": "^2.0.0",
     "lodash": "~4.11.1",
     "node-uuid": "^1.4.7",
     "seneca-neo4j-store": "^1.0.x",
