--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,30 +1,30 @@
 client:
- build: ./docker
+ build: .
  dockerfile: dev-Dockerfile
  links:
   - server
  volumes:
-  - $PWD:/home/dogfish/src
+  - $PWD/..:/home/dogfish/src
  command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && nodemon -L --ignore 'test/*.js' ./test/test-client.js"
 
 server:
- build: ./docker
+ build: .
  dockerfile: dev-Dockerfile
  links:
   - neo4j
  volumes:
-  - $PWD:/home/dogfish/src
+  - $PWD/..:/home/dogfish/src
  command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && nodemon -L --ignore 'test/*.js' ./user-service.js"
 
 test:
- build: ./docker
+ build: .
  links:
   - neo4j
  user: dogfish
  command: ash -c "cd /home/dogfish/src && npm install --dev && npm install seneca${SENECA_VER} && npm test"
 
 neo4j:
- build: ./docker
+ build: .
  dockerfile: neo4j-Dockerfile
  ports: 
   - "7474:7474"
