--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 script:
+  - cd /home/dogfish/docker
   - docker-compose up -d neo4j
   - docker-compose up -d user
   - docker-compose test
