--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   - cd ./docker
   - docker-compose up -d neo4j
   - docker-compose build
+  - ls -la /home/dogfish/src/node_modules
   - docker-compose up -d user
   - docker-compose up test
 
